syntax = "proto3";

option java_package = "com.lynxanalytics.biggraph.graph_api.proto";

package sphynx;

message CanComputeRequest {
  string operation = 1;
}

message CanComputeReply {
  bool canCompute = 1;
}

message ComputeRequest {
  string operation = 1;
}

message ComputeReply {}

message GetScalarRequest {
  string guid = 1;
}

message GetScalarReply {
  string scalar = 1;
}

message WriteToUnorderedDiskRequest {
  string guid = 1;
}

message WriteToUnorderedDiskReply {}

service Sphynx {
  rpc CanCompute (CanComputeRequest) returns (CanComputeReply);
  rpc Compute (ComputeRequest) returns (ComputeReply);
  rpc GetScalar (GetScalarRequest) returns (GetScalarReply);
  rpc WriteToUnorderedDisk (WriteToUnorderedDiskRequest) returns (WriteToUnorderedDiskReply);
}
